# DupV

./: LICENSE  dupv.cabal  test.csv  test.template
src/: Main.hs
src/DupV/: SimpleCSV.hs  Template.hs
