-- dupv.cabal

name:                dupv
version:             0.1.0.0
synopsis:            File duplication with variation.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Stuart Kurtz
maintainer:          stuart@cs.uchicago.edu
copyright:           © 2017 Stuart A. Kurtz
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable dupv
  main-is:             Main.hs
  other-modules:       DupV.SimpleCSV,  DupV.Template
  -- other-extensions:    
  build-depends:       base >=4.10 && <4.11, containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

